@@ -1,5 +1,5 @@
 
-  Copyright (C) 2008-9, the Phantom Inker.  All rights reserved.
+  Copyright (C) 2008-10, the Phantom Inker.  All rights reserved.
   Portions copyright (c) 2004-2008 AddedBytes.com
 
   Redistribution and use in source and binary forms, with or without
